--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,8 +1,8 @@
 .App {
   height: 100vh;
-  background-color: #0d1116;
+  background-color: #d6dbe0;
   text-align: center;
-  color: white;
+  color: #0d1116;
 }
 
 p {
@@ -11,7 +11,7 @@ p {
 
 .container {
   height: 100%;
-  background-color: #181818;
+  background-color: #cec7c7;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -32,12 +32,14 @@ header {
   margin: 0;
   font-size: 35px;
   font-weight: bold;
-  color: white;
+  color: #0d1116;
 }
 
 .subtitle {
-  font-size: 25px;
-  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  font-family: 'Courier New', Courier, monospace;
+  color: #0d1116;
 }
 
 .left {
@@ -53,12 +55,15 @@ header {
 
 .right {
   display: flex;
-  background: black;
+  font-weight: bold;
+  font-size: 1.2rem;
+  background: rgb(8, 8, 8);
   border-radius: 16px;
   padding: 12px 20px;
   height: 99%;
   margin-right: 10%;
   margin-top: 10px;
+  color: white;
 }
 
 .content-container {
@@ -144,15 +149,6 @@ header {
   justify-content: center;
   align-items: center;
   padding-bottom: 30px;
-}
-
-.twitter-logo {
-  width: 35px;
-  height: 35px;
-}
-
-.footer-text {
-  color: white;
   font-size: 16px;
   font-weight: bold;
 }
@@ -171,7 +167,7 @@ input {
   background-color: black;
   color: white;
   letter-spacing: 1px;
-  font-size: 26px;
+  font-size: 20px;
   width: 400px;
   margin-bottom: 10px;
   padding: 10px 20px;
